--- a/Civil War Ireland/Civil War Ireland.csproj
+++ b/Civil War Ireland/Civil War Ireland.csproj
@@ -48,8 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Battle.cs" />
     <Compile Include="Counties.cs" />
     <Compile Include="CountiesEnum.cs" />
+    <Compile Include="CountiesOwned.cs" />
     <Compile Include="DbConnect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
