--- a/Civil War Ireland/Civil War Ireland.csproj
+++ b/Civil War Ireland/Civil War Ireland.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>Login Screen.cs</DependentUpon>
     </Compile>
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerADO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Troops.cs" />
