--- a/Civil War Ireland/Civil War Ireland.csproj
+++ b/Civil War Ireland/Civil War Ireland.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="Player.cs" />
     <Compile Include="PlayerADO.cs" />
+    <Compile Include="PlayerOracleADO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Troops.cs" />
