--- a/Civil War Ireland/Civil War Ireland.csproj
+++ b/Civil War Ireland/Civil War Ireland.csproj
@@ -66,9 +66,9 @@
     <Compile Include="Login Screen.Designer.cs">
       <DependentUpon>Login Screen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerADO.cs" />
-    <Compile Include="PlayerOracleADO.cs" />
+    <Compile Include="Player\Player.cs" />
+    <Compile Include="Player\PlayerADO.cs" />
+    <Compile Include="Player\PlayerOracleADO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Troops.cs" />
