--- a/Civil War Ireland/Civil War Ireland.csproj
+++ b/Civil War Ireland/Civil War Ireland.csproj
@@ -53,18 +53,20 @@
     <Compile Include="CountiesEnum.cs" />
     <Compile Include="CountiesOwned.cs" />
     <Compile Include="DbConnect.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="GameScreen\InGameScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="GameScreen\InGameScreen.Designer.cs">
+      <DependentUpon>InGameScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameScreen\InGameADO.cs" />
+    <Compile Include="GameScreen\InGameOracleADO.cs" />
     <Compile Include="Gold.cs" />
-    <Compile Include="Login Screen.cs">
+    <Compile Include="StartGame.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login Screen.Designer.cs">
-      <DependentUpon>Login Screen.cs</DependentUpon>
+    <Compile Include="StartGame.Designer.cs">
+      <DependentUpon>StartGame.cs</DependentUpon>
     </Compile>
     <Compile Include="PlayerFolder\Player.cs" />
     <Compile Include="PlayerFolder\PlayerADO.cs" />
@@ -74,11 +76,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Troops.cs" />
     <Compile Include="User.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="GameScreen\InGameScreen.resx">
+      <DependentUpon>InGameScreen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login Screen.resx">
-      <DependentUpon>Login Screen.cs</DependentUpon>
+    <EmbeddedResource Include="StartGame.resx">
+      <DependentUpon>StartGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
